<resources>
    <string name="app_name">Code4A</string>
    <string name="version_name">v1.0.0-beta</string>
    <string name="setting">设置</string>
    <string name="setting_theme_color">主题颜色</string>
    <string name="setting_theme_summary">更改主题颜色</string>
    <string name="dialog_theme_summary">输入颜色代码，如：#1d97f5</string>
    <string name="waring_error_color">颜色代码不正确，请重新设置</string>
    <string name="waring_permission">权限不足</string>

    <!-- About -->
    <string name="setting_authors">作者信息</string>
    <string name="setting_open_source">开源信息</string>

    <string name="setting_about">关于</string>
    <string name="setting_tieba_summary">访问贴吧</string>
    <string name="setting_language">语言</string>
    <string name="setting_language_select">选择一个语言</string>
    <string name="setting_debug">调试模式</string>
    <string name="setting_collection">提交信息</string>
    <string name="about_collection">收集手机信息帮助APP的改进，信息不包含个人隐私</string>
    <string name="setting_auth_donation">捐赠</string>
    <string name="setting_update">检查更新</string>
    <string name="info_loading">正在加载</string>
    <string name="nav_share">分享</string>
    <string name="nav_feedback">反馈</string>
    <string name="nav_tool">工具</string>
    <string name="username">未登录</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_contact">请输入您的联系方式</string>
    <string name="feedback_hide">请输入您的反馈意见(字数200以内)！</string>
    <string name="info_upload_slow">文件大小:%1$s 上传缓慢, 请等待</string>
    <string name="feedback_send">发送</string>
    <string name="setting_software_info">软件信息</string>
    <string name="share_content">我正在使用这个代码分享平台，超好用，你也来试试吧！</string>
    <string name="title_waring">警告</string>
    <string name="edit_waring">编辑文章时，所有附件已清空，请重新添加！</string>
    <string name="version_waring">当前版本不能登陆！</string>
    <string name="account_not_login">您没有登录！</string>
    <string name="error_title">标题不能为空</string>
    <string name="error_content">内容不能为空</string>
    <string name="input_title">请输入文章标题</string>
    <string name="click_file_tip">长按选择 %1$s</string>
    <string name="click_file_exit">再按一次退出选择文件</string>
    <string name="button_add">添加</string>
    <string name="button_ok">确定</string>
    <string name="button_copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="copy_fail">复制失败</string>
    <string name="button_cancel">取消</string>
    <string name="button_del">删除</string>
    <string name="button_edit">编辑</string>
    <string name="title_upload_article">上传文章</string>
    <string name="title_article">标题</string>
    <string name="title_upfile">上传文件</string>
    <string name="action_packfile">打包文件</string>
    <string name="action_upfinish">上传完成</string>
    <string name="info_selectclass">分类：</string>
    <string name="info_selectpower">选择权限：</string>
    <string name="wanning_visibility">当前版本只支持公开权限！</string>
    <string name="wanning_storage">请确保允许App有储存权限！</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="info_changelanguage">改变语言后，请手动重启App</string>
    <string name="error_network">网络错误：</string>
    <string name="error_network_use_local">网络错误，使用本地缓存</string>
    <string name="download_file">下载附件</string>
    <string name="no_article_error">服务器没有该文章！</string>
    <!-- Strings related to login -->
    <string name="prompt_account">邮箱或用户名</string>
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_confirm">确认密码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_login_in">登录</string>
    <string name="copyright"> ©ATDStudio 版权所有</string>
    <string name="double_click_exit">再按一次退出程序</string>

    <!--SigninActivity-->
    <string name="account_empty">账户不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="error">出现错误:</string>
    <string name="signing">登陆中</string>
    <string name="signin_successful">登陆成功</string>
    <string name="code">验证码</string>
    <string name="reset_password">忘记密码?</string>

    <string name="remote_error">出现错误:</string>
    <string name="info_down"> 下载中 </string>
    <!--SignupActivity-->
    <string name="please_wait">请稍等</string>
    <string name="email_empty">邮箱不能为空</string>
    <string name="signup_successful">注册成功</string>
    <string name="password_diff">密码不一致</string>

    <!--服务器返回错误-->
    <string name="name_format_error">用户名格式错误</string>
    <string name="email_format_error">邮件格式错误</string>
    <string name="name_exists_error">用户名已存在</string>
    <string name="email_exists_error">邮箱已注册</string>
    <string name="account_or_password_error">帐号或密码错误</string>
    <string name="user_freezed">用户被冻结</string>
    <string name="human_code_error">验证码错误</string>
    <string name="invite_code_error">邀请码错误</string>
    <string name="unknown_error">未知错误</string>

    <!--SigninUserAvtivity-->
    <string name="signin_user_activity">用户中心</string>
    <string name="user_name">用户名:</string>
    <string name="user_id">用户ID:</string>
    <string name="user_email">用户邮箱:</string>
    <string name="change_password">修改密码</string>
    <string name="change_email">修改邮箱</string>
    <string name="logout">退出登录</string>
    <string name="affirm_logout">确认退出登录？</string>
    <string name="edit_email">输入你的新邮箱</string>
    <string name="button_change">更改</string>
    <string name="change_email_successful">更改邮箱成功</string>
    <string name="change_password_successful">更改密码成功</string>
    <string name="change_avatar_successful">更改头像成功</string>
    <string name="change_failure">更改失败</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="title_activity_update_check">检查更新</string>
    <!-- 更新检查 -->
    <string name="download_update">下载更新</string>
    <string name="version_info">版本信息</string>

    <!-- 时间 -->
    <string name="time_just_now">刚刚</string>
    <string name="time_x_minute_ago">%1$d分钟前</string>
    <string name="time_x_hour_ago">%1$d小时前 %2$s</string>
    <string name="time_yesterday_time">昨天 %1$s</string>
    <string name="time_before_yesterday">前天 %1$s</string>
</resources>
