<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory android:title="@string/setting" >
        <ListPreference
            android:key="language"
            android:title="@string/setting_language"
            android:dialogTitle="@string/setting_language_select"
            android:entries="@array/language_list_key"
            android:entryValues="@array/language_list_value"/>
        <!-- 通过输入框填写主题颜色 -->
        <EditTextPreference
            android:key="themeColor"
            android:title="@string/setting_theme_color"
            android:summary="@string/setting_theme_summary"
            android:dialogTitle="@string/dialog_theme_summary" />
        <CheckBoxPreference
            android:checked="false"
            android:defaultValue="false"
            android:key="debug"
            android:title="@string/setting_debug" />
        <CheckBoxPreference
            android:checked="true"
            android:defaultValue="true"
            android:key="collection"
            android:title="@string/setting_collection" />
    </PreferenceCategory>

        <PreferenceScreen android:title="@string/setting_about"
            >
        </PreferenceScreen>
    
</PreferenceScreen>