<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">
    <EditText
        android:id="@+id/old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_pwd"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_pwd"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_confirm"
        android:inputType="textPassword"/>
</LinearLayout>