<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/undo"
        android:icon="@mipmap/ic_action_undo"
        android:title="撤销"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/redo"
        android:icon="@mipmap/ic_action_redo"
        android:title="恢复"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/export"
        android:icon="@mipmap/ic_action_send"
        android:title="发送"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addTitle"
        android:title="@string/title_article"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addCategory"
        android:title="@string/info_selectclass"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addPower"
        android:title="@string/info_selectpower"
        app:showAsAction="ifRoom" />

</menu>