<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <com.qmuiteam.qmui.widget.QMUIRadiusImageView
        android:layout_margin="8dp"
        app:qmui_is_circle="true"
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size" />
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:columnCount="2"
        app:rowCount="3">
        <android.widget.Space
            app:layout_columnWeight="1"/>
        <android.widget.Space
            app:layout_columnWeight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            app:layout_gravity="end"
            app:layout_row="0"
            app:layout_column="0"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="start"
            app:layout_row="0"
            app:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            app:layout_gravity="end"
            app:layout_row="1"
            app:layout_column="0"/>
        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="start"
            app:layout_row="1"
            app:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            app:layout_gravity="end"
            app:layout_row="2"
            app:layout_column="0"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="start"
            app:layout_row="2"
            app:layout_column="1" />
    </android.support.v7.widget.GridLayout>
    <TextView
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:gravity="center"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:textColor="@color/gray_light"
        android:background="@color/gray_drak"/>
    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:gravity="center"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:textColor="@color/gray_light"
        android:background="@color/colorAccent"/>
</LinearLayout>
