<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_contact"
            android:lines="1"
            android:paddingTop="30dp"
            app:bootstrapBrand="info"
            app:bootstrapSize="md" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_hide"
            android:lines="8"
            app:bootstrapBrand="info"
            app:bootstrapSize="md" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/feedBackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_send"
                app:bootstrapBrand="success"
                app:buttonMode="regular"/>


    </LinearLayout>
</LinearLayout>