<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:lines="2"
        app:bootstrapBrand="info"
        app:bootstrapSize="md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_selectclass" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/classspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/class_list_key" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_selectpower" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/powerspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/power_list_key" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="password"
            android:lines="1"
            app:bootstrapBrand="info"
            app:bootstrapSize="md" />


    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/okbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:roundedCorners="true" />
</LinearLayout>
